--- a/app/web/views/users/user_keys.erb
+++ b/app/web/views/users/user_keys.erb
@@ -1,6 +1,6 @@
 <div class="row user-profile">
   <div class="col-xs-10 col-xs-offset-1">
-    <form role="form" class="form-horizontal center-block">
+    <form role="form" id="apikeys" class="form-horizontal center-block">
 
       <div class="form-group">
         <label for="userForename" class="col-sm-2 control-label">API ID</label>
