--- a/app/web/views/users/cameras/camera_view.erb
+++ b/app/web/views/users/cameras/camera_view.erb
@@ -60,11 +60,11 @@
                     <label for="name">Camera Model</label>
                     <% @vendors.each do |v| -%>
                     <select id="cameraModel<%= v.exid -%>" name="cameraModel" class="form-control <% if v != @camera.vendor %>hidden<% end %>">
-                      <% v.firmwares.to_hash(:name).each_with_index  do |m, index| -%>
+                      <% v.models.to_hash(:name).each_with_index  do |m, index| -%>
                       <% if index == 0 %>
                       <option selected="selected" value="<%= m[0] -%>"><%= m[0] -%></option>
                       <% else %>
-                      <option value="<%= m[0] -%>" <% if @camera.firmware && m[0] == @camera.firmware.name %>selected="selected"<% end %>>
+                      <option value="<%= m[0] -%>" <% if @camera.model && m[0] == @camera.model.name %>selected="selected"<% end %>>
                         <%= m[0] -%>
                       </option>
                       <% end %>
