--- a/app/web/views/account/confirm_password_reset.erb
+++ b/app/web/views/account/confirm_password_reset.erb
@@ -1,16 +1,16 @@
 <div class='col-sm-10 col-sm-offset-1'>
   <h1>Password Reset</h1>
-  <p>Dear <%= @user.forename %>, you can now reset your password. The stronger the better and remember, it's more secure to use a unique password for every site you register on.</p>
+  <p>Dear <%= @user.firstname %>, you can now reset your password. The stronger the better and remember, it's more secure to use a unique password for every site you register on.</p>
   <form method="POST" role="form">
 
     <div class="form-group">
       <div class="form-inline">
         <div class="form-group col-xs-6">
-          <label for="forename">Password</label>
+          <label for="password">Password</label>
           <%= input(:password, :password, :required, placeholder: 'Password') %>
         </div>
         <div class="form-group col-xs-6">
-          <label for="lastname">Confirmation</label>
+          <label for="confirmation">Confirmation</label>
           <%= input(:confirmation, :password, :required, placeholder: 'Confirmation') %>
         </div>
       </div>
