--- a/app/web/views/signup.erb
+++ b/app/web/views/signup.erb
@@ -8,8 +8,8 @@
 						<div class="form-group">
 							<div class="form-inline">
 								<div class="form-group col-xs-6">
-									  <label for="forename">Forename</label>
-									  <%= input(:forename, :text, :required, placeholder: 'Forename', value: signup[:forename]) %>
+									  <label for="firstname">Firstname</label>
+									  <%= input(:firstname, :text, :required, placeholder: 'Forename', value: signup[:forename]) %>
 								</div>
 								<div class="form-group col-xs-6">
 									<label for="lastname">Lastname</label>
