--- a/app/web/views/users/user_profile.erb
+++ b/app/web/views/users/user_profile.erb
@@ -3,8 +3,8 @@
     <form id="userProfile" role="form" class="center-block">
 
       <div class="form-group">
-        <label for="userForename">Forename</label>
-        <input type="text" value="<%= @user.forename -%>" class="form-control" id="userForename" placeholder="Enter forename">
+        <label for="userFirstname">Firstname</label>
+        <input type="text" value="<%= @user.firstname -%>" class="form-control" id="userFirstname" placeholder="Enter firstname">
       </div>
 
       <div class="form-group">
