some missed changes and fixed gem numbers

--- a/app/web/views/signup.erb
+++ b/app/web/views/signup.erb
@@ -8,12 +8,12 @@
 						<div class="form-group">
 							<div class="form-inline">
 								<div class="form-group col-xs-6">
-									  <label for="firstname">Firstname</label>
-									  <%= input(:firstname, :text, :required, placeholder: 'Forename', value: signup[:forename]) %>
+									  <label for="firstname">First Name</label>
+									  <%= input(:firstname, :text, :required, placeholder: 'First Name', value: signup[:firstname]) %>
 								</div>
 								<div class="form-group col-xs-6">
-									<label for="lastname">Lastname</label>
-									<%= input(:lastname, :text, :required, placeholder: 'Lastname', value: signup[:lastname]) %>
+									<label for="lastname">Last Name</label>
+									<%= input(:lastname, :text, :required, placeholder: 'Last Name', value: signup[:lastname]) %>
 								</div>
 							</div>
 						</div>
