--- a/app/web/views/users/user_keys.erb
+++ b/app/web/views/users/user_keys.erb
@@ -3,9 +3,9 @@
     <form role="form" id="apikeys" class="form-horizontal center-block">
 
       <div class="form-group">
-        <label for="userForename" class="col-sm-2 control-label">API ID</label>
+        <label for="userFirstname" class="col-sm-2 control-label">API ID</label>
         <div class="col-sm-10">
-          <input type="text" value="<%= @user.api_id -%>" class="form-control" id="userForename" readonly="readonly">
+          <input type="text" value="<%= @user.api_id -%>" class="form-control" id="userFirstname" readonly="readonly">
         </div>
       </div>
 
