--- a/templates/emails/user/camera_shared_notification.html.erb
+++ b/templates/emails/user/camera_shared_notification.html.erb
@@ -54,12 +54,12 @@
           <td style="font-family: Arial, Helvetica, sans-serif; font-weight: normal; font-size: 14px; margin: 0; padding: 0;">
 
             <p class="lead" style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Hello from Evercam,</p>
-            <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><strong><%= user.fullname %></strong> has shared the camera <strong><%= camera['name'] %></strong> (<%= camera.id %>) with you.</p>
+            <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><strong><%= user.fullname %></strong> has shared the camera <strong><%= camera.name %></strong> (<%= camera.exid %>) with you.</p>
 
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Click on the link below to access this camera.</p>
             <!-- Callout Panel -->
             <p class="callout" style="color:#428bca; line-height: 1.6; background: #f5f5f5;  margin: 0 0 15px; padding: 15px;">
-              <a style="color:#428bca;" href="https://dashboard.evercam.io/cameras/<%= camera.id %>">https://dashboard.evercam.io/cameras/<%= camera.id %></a>
+              <a style="color:#428bca;" href="https://dashboard.evercam.io/cameras/<%= camera.exid %>">https://dashboard.evercam.io/cameras/<%= camera.exid %></a>
             </p><!-- /Callout Panel -->
             <br>
             <br>
