--- a/templates/emails/user/sign_up_to_share_email.html.erb
+++ b/templates/emails/user/sign_up_to_share_email.html.erb
@@ -54,7 +54,7 @@
           <td style="font-family: Arial, Helvetica, sans-serif; font-weight: normal; font-size: 14px; margin: 0; padding: 0;">
 
             <p class="lead" style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Hello from Evercam,</p>
-            <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><strong><%= user.fullname %></strong> has shared the camera <strong><%= camera['name'] %></strong> (<%= camera.id %>) with you.</p>
+            <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><strong><%= user.fullname %></strong> has shared the camera <strong><%= camera.name %></strong> (<%= camera.exid %>) with you.</p>
 
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">To access this camera, you will need to click on the link below and create an account with Evercam.</p>
             <!-- Callout Panel -->
