--- a/templates/emails/user/sign_up_to_share_email.html.erb
+++ b/templates/emails/user/sign_up_to_share_email.html.erb
@@ -61,6 +61,10 @@
             <p class="callout" style="color:#428bca; line-height: 1.6; background: #f5f5f5;  margin: 0 0 15px; padding: 15px;">
               <a style="color:#428bca; text-decoration:none;" href="https://dashboard.evercam.io/signup?key=<%= key %>">https://dashboard.evercam.io/signup?key=<%= key %></a>
             </p><!-- /Callout Panel -->
+            <% if add_snap %>
+            <br>
+            <img src="<snapshot.jpg@<%= socket %>>" alt='Camera Preview' style="max-width: 550px; display:block; margin:0 auto;" >
+            <% end %>
             <br>
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Your Evercam account will give you access to this camera and a whole world of possibilities for cameras!</p>
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">We're still in beta and greatly appreciate any feedback so if you have any suggestions or if there is anything we can do to improve your Evercam experience, please let us know!</p>
