--- a/templates/emails/user/confirm.html.erb
+++ b/templates/emails/user/confirm.html.erb
@@ -54,7 +54,7 @@
           <td style="font-family: Arial, Helvetica, sans-serif; font-weight: normal; font-size: 14px; margin: 0; padding: 0;">
 
             <p class="lead" style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Hi <%= user.fullname %>, </p>
-            <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Welcome to Evercam and thank you for creating an account!
+            <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Welcome to Evercam and thanks for creating an account.
             </p>
 
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">You can complete the sign-up process by following the url below to verify your email address.</p>
@@ -63,7 +63,7 @@
               <a style="color:#428bca; text-decoration:none;" href="https://dashboard.evercam.io/confirm?u=<%= user.username %>&c=<%= code %>">https://dashboard.evercam.io/confirm?u=<%= user.username %>&c=<%= code %></a>
             </p><!-- /Callout Panel -->
             <br>
-            <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">We're still in beta and greatly appreciate any feedback, so if you have any suggestions or if there is anything we can do to improve your Evercam experience, please let us know!</p><br>
+            <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">We're still in beta and greatly appreciate any feedback, so if you have any suggestions or if there is anything we can do to improve your Evercam experience, please let us know.</p><br>
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Thanks again for joining us,</p><br>
             <p style="line-height: 1.6; margin: 0 0 0px; padding: 0;">The Evercam Team</p>
             <p style="color:#aaaaaa; line-height: 1.0; margin: 0 0 10px; padding: 0;"><a href="#" style="text-decoration:none; color:#aaaaaa;">support@evercam.io</a></p>
