--- a/templates/emails/user/camera_shared_notification.html.erb
+++ b/templates/emails/user/camera_shared_notification.html.erb
@@ -66,7 +66,7 @@
             <img src="cid:snapshot.jpg@<%= socket %>" alt='Camera Preview' style="max-width: 550px; display:block; margin:0 auto;" >
             <% end %>
             <br>
-            <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">We're still in beta and greatly appreciate any feedback, so if you have any suggestions or if there is anything we can do to improve your Evercam experience, please let us know.</p>
+            <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">We greatly appreciate any feedback, so if you have any suggestions or if there is anything we can do to improve your Evercam experience, please let us know.</p>
             <p style="line-height: 1.6; margin: 0 0 0px; padding: 0;">The Evercam Team</p>
             <p style="color:#aaaaaa; line-height: 1.0; margin: 0 0 10px; padding: 0;"><a href="#" style="text-decoration:none; color:#aaaaaa;">support@evercam.io</a></p>
             <br>
