--- a/templates/emails/user/camera_shared_notification.html.erb
+++ b/templates/emails/user/camera_shared_notification.html.erb
@@ -59,7 +59,7 @@
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Click on the link below to access this camera.</p>
             <!-- Callout Panel -->
             <p class="callout" style="color:#428bca; line-height: 1.6; background: #f5f5f5;  margin: 0 0 15px; padding: 15px;">
-              <a style="color:#428bca;" href="https://dashboard.evercam.io/cameras/<%= camera.exid %>">https://dashboard.evercam.io/cameras/<%= camera.exid %></a>
+              <a style="color:#428bca;" href="https://dashboard.evercam.io/v1/cameras/<%= camera.exid %>">https://dashboard.evercam.io/cameras/<%= camera.exid %></a>
             </p><!-- /Callout Panel -->
             <% if add_snap %>
             <br>
