--- a/templates/emails/user/camera_shared_notification.html.erb
+++ b/templates/emails/user/camera_shared_notification.html.erb
@@ -56,6 +56,10 @@
             <p class="lead" style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Hello from Evercam,</p>
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><strong><%= user.fullname %></strong> has shared the camera <strong><%= camera.name %></strong> (<%= camera.exid %>) with you.</p>
 
+            <% if message.present? %>
+              <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><%= message %></p>
+            <% end %>
+
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Click on the link below to access this camera.</p>
             <!-- Callout Panel -->
             <p class="callout" style="color:#428bca; line-height: 1.6; background: #f5f5f5;  margin: 0 0 15px; padding: 15px;">
