--- a/templates/emails/user/camera_shared_notification.html.erb
+++ b/templates/emails/user/camera_shared_notification.html.erb
@@ -57,7 +57,7 @@
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><strong><%= user.fullname %></strong> has shared the camera <strong><%= camera.name %></strong> with you.</p>
 
             <% if message.present? %>
-              <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><%= message %></p>
+              <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><%= user.firstname %>'s message for you: <%= message %></p>
             <% end %>
 
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">Click on the link below to access this camera.</p>
