--- a/templates/emails/user/sign_up_to_share_email.html.erb
+++ b/templates/emails/user/sign_up_to_share_email.html.erb
@@ -57,7 +57,7 @@
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><strong><%= user.fullname %></strong> has shared the camera <strong><%= camera.name %></strong> with you.</p>
 
             <% if message.present? %>
-              <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><%= message %></p>
+              <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;"><%= user.firstname %>'s message for you: <%= message %></p>
             <% end %>
 
             <p style="line-height: 1.6; margin: 0 0 10px; padding: 0;">To access this camera, you will need to click on the link below and create an account with Evercam.</p>
